syntax = "proto3";

package catalog;

option go_package = "go-pet-microservices/catalog-service/proto";

service CatalogService {
  rpc GetItems(GetItemsRequest) returns (GetItemsResponse) {}
  rpc GetItem(GetItemRequest) returns (Item) {}
  rpc CreateItem(CreateItemRequest) returns (Item) {}
  rpc UpdateItem(UpdateItemRequest) returns (Item) {}
  rpc DeleteItem(DeleteItemRequest) returns (DeleteItemResponse) {}
}

message Item {
  string id = 1;
  string title = 2;
  string description = 3;
  repeated string tags = 4;
  string image_url = 5;
  double rating = 6;
  int32 review_count = 7;
  string created_at = 8;
  string updated_at = 9;
}

message GetItemsRequest {
  int32 page = 1;
  int32 limit = 2;
  string sort_by = 3;
  repeated string tags = 4;
}

message GetItemsResponse {
  repeated Item items = 1;
  int32 total = 2;
  int32 page = 3;
  int32 total_pages = 4;
}

message GetItemRequest {
  string id = 1;
}

message CreateItemRequest {
  string title = 1;
  string description = 2;
  repeated string tags = 3;
  string image_url = 4;
}

message UpdateItemRequest {
  string id = 1;
  optional string title = 2;
  optional string description = 3;
  repeated string tags = 4;
  optional string image_url = 5;
}

message DeleteItemRequest {
  string id = 1;
}

message DeleteItemResponse {
  bool success = 1;
}